chore: configuração página 1.1

--- a/001-1.md
+++ b/001-1.md
@@ -1,8 +1,8 @@
 ---
-title: Histogram
+title: Lista 1
 layout: home
 nav_order: 1
-parent: Charts
+parent: Exemplos
 ---
 
 <!--Don't delete ths script-->
