--- a/001-2.md
+++ b/001-2.md
@@ -1,8 +1,8 @@
 ---
-title: Line
+title: Lista 2
 layout: home
 nav_order: 2
-parent: Charts
+parent: Exemplos
 ---
 
 <!--Don't delete ths script-->
