--- a/001-3.md
+++ b/001-3.md
@@ -1,8 +1,8 @@
 ---
-title: Scatter
+title: Lista 3
 layout: home
 nav_order: 3
-parent: Charts
+parent: Exemplos
 ---
 
 <!--Don't delete ths script-->
