--- a/001-2.md
+++ b/001-2.md
@@ -10,212 +10,30 @@ parent: Exemplos
 <script id = "MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <!--Don't delete ths script-->
 
-<p align = "justify">This function shows a Multiple Lines in single chart.</p>
+<p align = "justify"> Questão 2: Considerando a projeção de peças identificadas na figura a seguir, determine as dimensões das lajes, vigas e pilares deste edifício. Considerar para a esse exemplo que o concreto estrutural possui  fck de 25 MPa, que o edifício modelo com um total de 4 pavimentos (Térreo, 1º piso, 2º piso e cobertura). Considere que todos os pavimentos tipo estão carregados com uma carga total de 25 kN/m² (Valor hipotético para esse exercício) e que o pavimento cobertura possui uma carga total de 15 kN/m².
+Determinar a planta a geometria das lajes e das vigas de um único pavimento e os pilares do térreo.
+</p>
 
-Input variables
-{: .label .label-yellow }
+<p aligin = "justify">
+Planta Baixa do Edifício
+<br>
+<img src="https://i.im.ge/2023/10/25/tCUJH1.Planta-Baixa-Lista-2.jpg">
+</p>
 
-<table style = "width:100%">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Type</th>
-      </tr>
-    </thead>
-    <tr>
-        <td>DATASET</td>
-        <td>Dataset specifications</td>
-        <td>Py dictionary</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'X'</code> = Abscissa axis or x-axis</td>
-        <td>Py list</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'Y'</code> = Ordinate axis or y-axis (multiple data)</td>
-        <td>Py list</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'LEGEND'</code> = List with the name of lines</td>
-        <td>Py list</td>
-    </tr> 
-    <tr>
-        <td>PLOT_SETUP</td>
-        <td>Specifications of chart</td>
-        <td>Py dictionary</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'NAME'</code> = Filename output file</td>
-        <td>String</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'WIDTH'</code> = Width figure</td>
-        <td>Float</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'HEIGHT'</code> = Height figure</td>
-        <td>Float</td>
-    </tr> 
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'MARKER'</code> = Line marker style (see matplotlib <a href="https://matplotlib.org/stable/api/_as_gen/matplotlib.lines.Line2D.html#matplotlib.lines.Line2D.set_marker" target="_blank">documentation</a>)</td>
-        <td>String</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'MARKER SIZE'</code> = Line marker size (see matplotlib <a href="https://matplotlib.org/stable/api/_as_gen/matplotlib.lines.Line2D.html#matplotlib.lines.Line2D.set_markersize" target="_blank">documentation</a>)</td>
-        <td>Integer</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'LINE WIDTH'</code> = Line width</td>
-        <td>Integer</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'LINE STYLE'</code> = Line style (see matplotlib <a href="https://matplotlib.org/stable/gallery/lines_bars_and_markers/linestyles.html" target="_blank">documentation Linestyles</a> and <a href="https://matplotlib.org/2.0.2/api/lines_api.html#matplotlib.lines.Line2D.set_linestyle" target="_blank">documentation Lines</a>)</td>
-        <td>Py list</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'X AXIS LABEL'</code> = X label name</td>
-        <td>String</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'X AXIS SIZE'</code> = X font axis size</td>
-        <td>Float</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'Y AXIS LABEL'</code> = Y label name</td>
-        <td>String</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'Y AXIS SIZE'</code> = Y font axis size</td>
-        <td>Float</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'AXISES COLOR'</code> = Axis color</td>
-        <td>String</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'LABELS SIZE'</code> = Labels size</td>
-        <td>Float</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'LABELS COLOR'</code> = Labels color</td>
-        <td>String</td>
-    </tr> 
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'CHART COLOR'</code> = Lines color (see matplotlib <a href="https://matplotlib.org/stable/gallery/color/named_colors.html" target="_blank">documentation</a>)</td>
-        <td>Py list</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'ON GRID'</code> = Grid on or off</td>
-        <td>Boolean (<code>True</code> or <code>False</code>)</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'LOC LEGEND'</code> = The location of the legend (see matplotlib <a href="https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.legend.html" target="_blank">documentation</a>)</td>
-        <td>String</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'SIZE LEGEND'</code> = Size legend</td>
-        <td>Float</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'Y LOG'</code> = Make a plot with log scaling on the y-axis.</td>
-        <td>Boolean (<code>True</code> or <code>False</code>)</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'X LOG'</code> = Make a plot with log scaling on the x-axis.</td>
-        <td>Boolean (<code>True</code> or <code>False</code>)</td>
-    </tr> 
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'DPI'</code> = The resolution in Dots Per Inch</td>
-        <td>Integer</td>
-    </tr>   
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'EXTENSION'</code> = Extension output file (see matplotlib savefig <a href="https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.savefig.html" target="_blank">documentation</a>)</td>
-        <td>String</td>
-    </tr>
-</table>
+<p aligin = "justify">
+Planta Baixa do Edifício - Área de Influência dos Pilares
+<br>
+<img src="https://i.im.ge/2023/10/25/tC0PO1.Planta-Baixa-Lista-2-Area-de-Influencia.jpg">
+</p>
 
-Output variables
-{: .label .label-yellow }
+<h1>Etapas para resolulção do exercício</h1> 
 
-<p align = "justify">The function displays the plot on the screen and saves it to the local folder of the <code>.ipynb</code> / <code>.py</code> file.</p>
+<p aligin = "justify">
+A seguir, estão os passos gerais envolvidos no dimensionamento do edifício: 
+</p>
 
-Example 1
-{: .label .label-yellow }
-
-<p align = "justify">We use the <code>LINE_CHART</code> function to plot a series of fruit prices.</p>
-
-```python
-# Data
-LEGEND = ['Banana', 'Apple', 'Orange', 'Pineapple', 'Mango']
-LINE_STY = ['--', '-', ':', '-.', 'None']
-PRICES = [[2.5, 3.0, 2.2, 4.5, 3.5],
-            [2.2, 2.8, 2.4, 4.3, 3.2],
-            [2.8, 3.2, 2.5, 4.0, 3.8],
-            [2.6, 2.9, 2.3, 4.2, 3.6],
-            [2.3, 3.1, 2.6, 4.1, 3.4]]
-YEARS = list(range(2012, 2017))
-COLORS = ['#000000','olive','r','yellow','green']
-
-# Chart setup
-CHART_CONFIG = {
-              'NAME': 'figure5',
-              'WIDTH': 0.20, 
-              'HEIGHT': 0.10,
-              'MARKER': 's',
-              'MARKER SIZE': 3,
-              'LINE WIDTH': 4,
-              'LINE STYLE': LINE_STY,
-              'X AXIS LABEL': 'Year',
-              'X AXIS SIZE': 10,
-              'Y AXIS LABEL': 'Price ($\$$)',
-              'Y AXIS SIZE': 10,
-              'AXISES COLOR': '#000000',
-              'LABELS SIZE': 14,
-              'LABELS COLOR': '#000000',
-              'CHART COLOR': COLORS,
-              'ON GRID?': True,
-              'LOC LEGEND': 'upper left',
-              'SIZE LEGEND': 12,
-              'Y LOG': False,
-              'X LOG': False,
-              'DPI': 600, 
-              'EXTENSION': 'svg'
-             }
-
-# Data statement 
-DATA = {'X': YEARS, 'Y': PRICES, 'LEGEND': LEGEND}
-
-# Call function
-LINE_CHART(DATASET = DATA, PLOT_SETUP = CHART_CONFIG)
-```
-
-<center><img src="assets/images/figure5.svg" width="70%"></center>
-<p align = "center"><b>Figure 1.</b> Fruit prices series between 2012 to 2016.</p>
-
-[Notebook example](https://mega.nz/file/Cl82iBZB#206a0pAcSDi3PQuaCy_l7PkfQkCU7pLOOe8kVBX544M){: .btn .btn-outline }
+<ol>
+  <li>Pré-dimensionamento das Vigas</li>
+  <li>Pré-dimensionamento das Lajes</li>
+  <li>Pré-dimensioamento dos Pilares</li>
+  </ol>
