--- a/001-2.md
+++ b/001-2.md
@@ -26,7 +26,7 @@ Planta Baixa do Edifício - Área de Influência dos Pilares
 <img src="https://i.im.ge/2023/10/25/tC0PO1.Planta-Baixa-Lista-2-Area-de-Influencia.jpg">
 </p>
 
-<h1>Etapas para resolulção do exercício</h1> 
+<h1>Etapas para resolução do exercício</h1> 
 
 <p aligin = "justify">
 A seguir, estão os passos gerais envolvidos no dimensionamento do edifício: 
