--- a/001-2.md
+++ b/001-2.md
@@ -37,3 +37,13 @@ A seguir, estão os passos gerais envolvidos no dimensionamento do edifício:
   <li>Pré-dimensionamento das Lajes</li>
   <li>Pré-dimensioamento dos Pilares</li>
   </ol>
+
+<h2>1. Pré-dimsensionamento das Vigas</h2> 
+
+<p aligin = "justify">
+É possível pré-dimensionar as dimensões das vigas utilizando uma relação que envolve o vão efetivo (l<sub>ef</sub>). Para o presente projeto, o vão efetivo a ser considerado foram os vãos totais das vigas. Para o pré-dimensionamento de vigas, são utilizadas duas equações, na qual utilizam a relação com o vão efetivo das estruturas.
+</p>
+
+
+
+
