--- a/001-2.md
+++ b/001-2.md
@@ -44,6 +44,10 @@ A seguir, estão os passos gerais envolvidos no dimensionamento do edifício:
 É possível pré-dimensionar as dimensões das vigas utilizando uma relação que envolve o vão efetivo (l<sub>ef</sub>). Para o presente projeto, o vão efetivo a ser considerado foram os vãos totais das vigas. Para o pré-dimensionamento de vigas, são utilizadas duas equações, na qual utilizam a relação com o vão efetivo das estruturas.
 </p>
 
+<p <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>h</mi><mo>=</mo><mfrac><mrow><mi>l</mi><mi>e</mi><mi>f</mi></mrow><mn>10</mn></mfrac>
+</math>
+</p>
+
 <h2>2. Pré-dimensionamento das Lajes</h2> 
 
 <h2>3. Pré-dimensionamento dos Pilares</h2> 
