--- a/001-2.md
+++ b/001-2.md
@@ -48,6 +48,11 @@ A seguir, estão os passos gerais envolvidos no dimensionamento do edifício:
 </math>
 </p>
 
+<p aligin = "justify"> A fim de facilitar o processo construtivo, foi adotado uma altura da viga (h) de 50 cm para todas as vigas. Já para a largura da viga (bw) foi estimado um tijolo de 9 cm mais 5 cm de reboco (2,5 cm para cada lado). Dessa forma, as vigas adotadas são de 14 cm x 50 cm, respeitando a medida mínima de 12 cm de largura estabelecida pela NBR 6118.
+</p>
+
+<p aligin = "justify"> Tabela 1 - Pré-dimensionamento das Vigas</p>
+
 <h2>2. Pré-dimensionamento das Lajes</h2> 
 
 <h2>3. Pré-dimensionamento dos Pilares</h2> 
