--- a/001-2.md
+++ b/001-2.md
@@ -55,4 +55,23 @@ A seguir, estão os passos gerais envolvidos no dimensionamento do edifício:
 
 <h2>2. Pré-dimensionamento das Lajes</h2> 
 
+<p aligin = "justify"> Para o pré-dimensionamento é importante se atentar à medida mínima dada na NBR 6118, na qual estabelece que a laje que se encontra em balanço deve ter no mínimo uma altura (h) de 10 cm. Como as lajes são elementos de superfície, elas possuem duas dimensões em planta denominadas l<sub>x</sub>(menor dimensão) e l<sub>y</sub>(maior dimensão). As lajes são classificadas por meio da razão entre o seu o maior e o menor lado, dada por:</p>
+
+<p <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>&#x3bb;</mi><mo>=</mo><mfrac><mrow><mi>l</mi><mi>y</mi></mrow><mrow><mi>l</mi><mi>x</mi></mrow></mfrac></math>
+</p>
+
+<p aligin = "justify"> Após determinar o modo que a laje está armada, é possível determinar a altura (h) da mesma, por meio das seguintes equações abaixo:</p>
+
+<p <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>h</mi><mo>=</mo><mn>2</mn><mo>%</mo><mo>*</mo><mo>(</mo><mfrac><mrow><mi>l</mi><mi>y</mi><mo>+</mo><mi>l</mi><mi>x</mi></mrow><mn>2</mn></mfrac><mo>)</mo></math>
+<br>
+<math xmlns="http://www.w3.org/1998/Math/MathML"><mi>h</mi><mo>=</mo><mn>2</mn><mo>%</mo><mo>*</mo><mo>(</mo><mi>l</mi><mi>x</mi><mo>)</mo></math>
+<br>
+<math xmlns="http://www.w3.org/1998/Math/MathML"><mi>h</mi><mo>=</mo><mn>4</mn><mo>%</mo><mo>*</mo><mo>(</mo><mi>l</mi><mi>x</mi><mo>)</mo></math>
+</p>
+
+<p aligin = "justify"> Aplicando-se as equações e respeitando o limite mínimo dado em norma, pode-se construir a Tabela 2, na qual dá um valor para altura da laje de 11 cm, respeitando a NBR 6118 e padronizando os valores da altura.
+</p>
+
+<p aligin = "justify"> Tabela 2 - Pré-dimensionamento das Lajes</p>
+
 <h2>3. Pré-dimensionamento dos Pilares</h2> 
