--- a/001-2.md
+++ b/001-2.md
@@ -75,3 +75,16 @@ A seguir, estão os passos gerais envolvidos no dimensionamento do edifício:
 <p aligin = "justify"> Tabela 2 - Pré-dimensionamento das Lajes</p>
 
 <h2>3. Pré-dimensionamento dos Pilares</h2> 
+
+<p aligin = "justify"> No processo de dimensionamento dos pilares, a NBR 6118 estipula que a seção transversal desses elementos deve ter pelo menos 19 cm na menor dimensão. No entanto, em determinadas circunstâncias, essa dimensão mínima pode ser reduzida para 14 cm, desde que as cargas sejam adequadamente majoradas para garantir a segurança estrutural.</p> 
+
+<p aligin = "justify"> A partir da planta baixa "Área de Influência dos Pilares" é possível calcular a área de influência para cada pilar do edifício. E como foi informado as cargas para cada pavimento (tipo e cobertura) é possivel determinar a carga de cálculo (Nd) que incide em cada um dos pilares.</p> 
+
+<p aligin = "justify"> Com isso, é possível determinar a Área de Concreto (Ac) por meio da seguinte fórmula:</p> 
+
+<p <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>A</mi><mi>c</mi><mo>=</mo><mfrac><mrow><mi>N</mi><mi>d</mi></mrow><mrow><mn>0</mn><mo>,</mo><mn>85</mn><mo>*</mo><mi>f</mi><mi>c</mi><mi>d</mi><mo>&#xA0;</mo><mo>+</mo><mo>&#xA0;</mo><mi>&#x3c1;</mi><mo>*</mo><mi>&#x3c3;</mi><mi>s</mi><mo>,</mo><mi>&#x3b5;</mi><mo>=</mo><mn>0</mn><mo>,</mo><mn>2</mn><mo>%</mo></mrow></mfrac></math>
+</p>
+
+<p aligin = "justify"> Aplicando-se a equação acima é possível determinar a altura (h) dos pilares desse edifício.</p>
+
+<p aligin = "justify"> Tabela 3 - Pré-dimensionamento dos Pilares</p>
