--- a/001-1.md
+++ b/001-1.md
@@ -10,212 +10,53 @@ parent: Exemplos
 <script id = "MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <!--Don't delete ths script-->
 
-<p align = "justify">This function shows a Boxplot and Histogram in a single chart.</p>
+<h1>Lista 1</h1>
 
-Input variables
-{: .label .label-yellow }
+<h2>Exercício 1</h2>
 
-<table style = "width:100%">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Type</th>
-      </tr>
-    </thead>
-    <tr>
-        <td>DATASET</td>
-        <td>Dataset specifications</td>
-        <td>Py dictionary</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'DATASET'</code> = Full dataset</td>
-        <td>Py dataframe</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'COLUMN'</code> = Specify the column you want to plot</td>
-        <td>String</td>
-    </tr>  
-    <tr>
-        <td>PLOT_SETUP</td>
-        <td>Specifications of chart</td>
-        <td>Py dictionary</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'NAME'</code> = Filename output file</td>
-        <td>String</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'WIDTH'</code> = Width figure</td>
-        <td>Float</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'HEIGHT'</code> = Height figure</td>
-        <td>Float</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'X AXIS LABEL'</code> = X label name</td>
-        <td>String</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'X AXIS SIZE'</code> = X font axis size</td>
-        <td>Float</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'Y AXIS LABEL'</code> = Y label name</td>
-        <td>String</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'Y AXIS SIZE'</code> = Y font axis size</td>
-        <td>Float</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'AXISES COLOR'</code> = Axis color</td>
-        <td>String</td>
-    </tr>  
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'LABELS SIZE'</code> = Labels size</td>
-        <td>Float</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'LABELS COLOR'</code> = Labels color</td>
-        <td>String</td>
-    </tr> 
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'CHART COLOR'</code> = Boxplot and histogram color</td>
-        <td>String</td>
-    </tr>
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'BINS'</code> = Range representing the width of a single bar</td>
-        <td>Integer</td>
-    </tr> 
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'DPI'</code> = The resolution in Dots Per Inch</td>
-        <td>Integer</td>
-    </tr>   
-    <tr>
-        <td><i>key</i></td>
-        <td><code>'EXTENSION'</code> = Extension output file (see matplotlib savefig <a href="https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.savefig.html" target="_blank">documentation</a>)</td>
-        <td>String</td>
-    </tr>
+<p aligin = "justify">
+  <b>01)</b> Você é projetista de uma construção pré-fabricada e necessita saber qual a classe de  concreto com resistência à compressão \(f_{ck,j}\) superior a 21 MPa na idade de 3 dias. Para tanto construa a curva de ganho de resistência nos 10 primeiros dias para concretos com \(f_{ck}\) 30, 40 e 60 MPa , considerando que o cimento adotado é o CPV-ARI.
+</p>
+
+<table>
+  <tr>
+    <td align = "left">\[f_{ck,j} = \beta_{1(t,s)} \cdot f_{ck,28}\]</td>
+    <td><p align = "right" id = "eq1">(1)</p></td>
+  </tr>
+  <tr>
+    <td align = "left">\[\beta_{1} = exp \left\{ s \cdot \left[ 1 - \left( \frac{28}{t} \right) ^{1/2} \right] \right\} \]</td>
+    <td><p align = "right" id = "eq2">(2)</p></td>
+  </tr>
 </table>
 
-Output variables
-{: .label .label-yellow }
+<h2>Exercício 2</h2>
 
-<p align = "justify">The function displays the plot on the screen and saves it to the local folder of the <code>.ipynb</code> / <code>.py</code> file.</p>
+<p aligin = "justify">
+  <b>02)</b> Dado um concreto com \(f_{ck} = 30 \, \text{MPa}\) determine o módulo de elasticidade tangente e secante considerando um agregado de granito.
+</p>
 
-Example 1
-{: .label .label-yellow }
+<table>
+  <tr>
+    <td align = "left">\[E_{ci} = \alpha_{E} \cdot 5600 \cdot \sqrt{f_{ck}}\]</td>
+    <td><p align = "right" id = "eq3">(3)</p></td>
+  </tr>
+  <tr>
+    <td align = "left">\[E_{ci} = 21,5 \cdot 10^{3} \cdot \alpha_{E} \cdot \left( \frac{f_{ck}}{10} + 1,25 \right) ^{1/3} \]</td>
+    <td><p align = "right" id = "eq4">(4)</p></td>
+  </tr>
+  <tr>
+    <td align = "left">\[E_{cs} = \alpha_{i} \cdot E_{ci} \]</td>
+    <td><p align = "right" id = "eq5">(5)</p></td>
+  </tr>
+  <tr>
+    <td align = "left">\[\alpha_{i} = 0,8 + 0,2 \cdot \frac{f_ck}{80} \leq 1,0 \]</td>
+    <td><p align = "right" id = "eq6">(6)</p></td>
+  </tr>
+</table>
 
-<p align = "justify">We use the <code>HISTOGRAM_CHART</code> function to plot a series of random numbers with normal distribution.</p>
+<h2>Exercício 3</h2>
 
-```python
-# Data
-DF =  pd.DataFrame({'col1': np.random.normal(0, 1, 1000),
-                     'col2': np.random.normal(5, 2, 1000),
-                     'col3': np.random.normal(-5, 3, 1000)})
-COLUMN = 'col1'
+<p aligin = "justify">
+  <b>03)</b> Dada a revisão 2023 da NBR 6118 você deve apresentar o diagrama tensão-deformação na compressão para o concreto simples estrutural. A formulação é dada no item 8.2.10.1. Fazer um exemplo de diagrama para um concreto C30, C40, C50 e C70 comprando os gráficos.
+</p>
 
-# Chart config
-CHART_CONFIG = {
-              'NAME': f"{COLUMN}_Histogram",
-              'EXTENSION': 'svg',
-              'WIDTH': 0.20, 
-              'HEIGHT': 0.10,
-              'X AXIS LABEL': '$x_{i}$ variable',
-              'X AXIS SIZE': 15.5,
-              'Y AXIS LABEL': 'Frequency',
-              'Y AXIS SIZE': 15.5,
-              'AXISES COLOR': '#000000',
-              'LABELS SIZE': 15.5,
-              'LABELS COLOR': '#000000', 
-              'CHART COLOR': '#2219F0',
-              'BINS': 20,
-              'DPI': 600,
-             }
-
-# Data statement 
-DATA = {
-         'DATASET': DF,
-         'COLUMN': COLUMN        
-       }  
-
-# Call function
-HISTOGRAM_CHART(DATASET = DATA, PLOT_SETUP = CHART_CONFIG)
-```
-
-<center><img src="assets/images/figure1.svg" width="70%"></center>
-<p align = "center"><b>Figure 1.</b> \(x_{1}\) variable histogram and boxplot.</p>
-
-Example 2
-{: .label .label-yellow }
-
-<p align = "justify">We will do the same example shown earlier but using the function inside a looping</p>
-
-```python
-# Data
-DF =  pd.DataFrame({'col1': np.random.normal(0, 1, 1000),
-                     'col2': np.random.normal(5, 2, 1000),
-                     'col3': np.random.normal(-5, 3, 1000)})
-COLUMN = 'col1'
-NAMES = np.array([['$x_{1}$', '#8C0C15'], 
-                  ['$x_{2}$', '#5FD34D'],
-                  ['$x_{3}$', '#4DA7D3']])
-ID = 0
-
-# Plot in looping
-for COLUMN in DF:
-    # Chart config
-    CHART_CONFIG = {
-              'NAME': f"{COLUMN}_Histogram",
-              'EXTENSION': 'svg',
-              'WIDTH': 0.20, 
-              'HEIGHT': 0.10,
-              'X AXIS LABEL': NAMES[ID, 0],
-              'X AXIS SIZE': 15,
-              'Y AXIS LABEL': 'Frequency',
-              'Y AXIS SIZE': 15,
-              'AXISES COLOR': '#000000',
-              'LABELS SIZE': 15,
-              'LABELS COLOR': '#000000', 
-              'CHART COLOR': NAMES[ID, 1],
-              'BINS': 20,
-              'DPI': 600,
-             }
-    
-    DATA = {
-            'DATASET': DF,
-            'COLUMN': COLUMN        
-           }
-    HISTOGRAM_CHART(DATASET = DATA, PLOT_SETUP = CHART_CONFIG)
-    ID += 1
-```
-<center><img src="assets/images/figure2.svg" width="70%"></center>
-<p align = "center">
-<b>Figure 2.</b> \(x_{1}\) variable histogram and boxplot.</p>
-
-<center><img src="assets/images/figure3.svg" width="70%"></center>
-<p align = "center">
-<b>Figure 3.</b> \(x_{2}\) variable histogram and boxplot.</p>
-
-<center><img src="assets/images/figure4.svg" width="70%"></center>
-<p align = "center">
-<b>Figure 4.</b> \(x_{3}\) variable histogram and boxplot.</p>
-
-[Notebook example](https://mega.nz/file/31FFDIAZ#zVEB5y81VjlbIazIijpgqzTFTxLtmqJVpnA6QAF7vjA){: .btn .btn-outline }
