--- a/001-1.md
+++ b/001-1.md
@@ -29,6 +29,61 @@ parent: Exemplos
   </tr>
 </table>
 
+<p aligin = "justify">
+  Primeiramente, define-se o valor de \(s\) de acordo com o tipo de cimento a ser adotado. O item 12.3.3 da NBR 6118:2023 apresenta os seguintes valores para esse parâmetro.
+</p>
+
+<table>
+  <thead align="center">
+    <tr>
+      <th>Cimento</th>
+      <th>s</th>
+    </tr>
+  </thead>
+  <tbody align="center">
+    <tr>
+      <td align = "left">CPI</td>
+      <td>0,25</td>
+    </tr>
+    <tr>
+      <td align = "left">CPII</td>
+      <td>0,25</td>
+    </tr>
+    <tr>
+      <td align = "left">CPIII</td>
+      <td>0,38</td>
+    </tr>
+    <tr>
+      <td align = "left">CPIV</td>
+      <td>0,38</td>
+    </tr>
+    <tr>
+      <td align = "left">CPV-ARI</td>
+      <td>0,20</td>
+    </tr>
+  </tbody>
+  </table>
+
+<p aligin = "justify">
+  Logo, como neste caso será utilizado CPV-ARI, tem-se que \(s = 0,20\). Em seguida, calcula-se o valor do parâmetro \(\beta_{1}\) por meio da equação <a href="#eq2">(2)</a> para um período \(t\) em dias. Logo, adotando-se um período \(t\) de 10 dias, tem-se que:
+</p>
+
+<p>
+  \[\beta_{1} = exp \left\{ 0,20 \cdot \left[ 1 - \left( \frac{28}{10} \right) ^{1/2} \right] \right\} = 0,874 \]
+</p>
+
+<p aligin = "justify">
+  Portanto, encontra-se o valor da resistência \(F_{ck,j}\) por meio da equação <a href="#eq1">(1)</a>. Adontando-se \(F_{ck,28} = 30 \, \text{MPa}\), tem-se:
+</p>
+
+<p>
+  \[f_{ck,j} = 0,874 \cdot 30 = 26,22 \, \text{MPa}\]
+</p>
+
+<p aligin = "justify">
+  Como o exercício proposto requer a realização de um gráfico, basta aplicar tal procedimento, na qual \(t\) é a varíavel, que neste caso irá de 1 a 10 dias. E também, deve-se repetir o processo para os demais valores de \(f_{ck}\) propostos.
+</p>
+
 <h2>Exercício 2</h2>
 
 <p aligin = "justify">
