--- a/001-1.md
+++ b/001-1.md
@@ -112,6 +112,6 @@ parent: Exemplos
 <h2>Exercício 3</h2>
 
 <p aligin = "justify">
-  <b>03)</b> Dada a revisão 2023 da NBR 6118 você deve apresentar o diagrama tensão-deformação na compressão para o concreto simples estrutural. A formulação é dada no item 8.2.10.1. Fazer um exemplo de diagrama para um concreto C30, C40, C50 e C70 comprando os gráficos.
+  <b>03)</b> Dada a revisão 2023 da NBR 6118 você deve apresentar o diagrama tensão-deformação na compressão para o concreto simples estrutural. A formulação é dada no item 8.2.10.1. Fazer um exemplo de diagrama para um concreto C30, C40, C50 e C70 comparando os gráficos.
 </p>
 
