--- a/001-1.md
+++ b/001-1.md
@@ -62,7 +62,7 @@ parent: Exemplos
       <td>0,20</td>
     </tr>
   </tbody>
-  </table>
+</table>
 
 <p aligin = "justify">
   Logo, como neste caso será utilizado CPV-ARI, tem-se que \(s = 0,20\). Em seguida, calcula-se o valor do parâmetro \(\beta_{1}\) por meio da equação <a href="#eq2">(2)</a> para um período \(t\) em dias. Logo, adotando-se um período \(t\) de 10 dias, tem-se que:
@@ -108,6 +108,61 @@ parent: Exemplos
     <td><p align = "right" id = "eq6">(6)</p></td>
   </tr>
 </table>
+
+<p aligin = "justify">
+  Primeiramente, define-se o valor de \(\alpha_{E}\), de acordo com o agregado a ser utilizado. O item 8.2.8 da NBR 6118:2023 apresenta os seguintes valores para esse parâmetro.
+</p>
+
+<table>
+  <thead align="center">
+    <tr>
+      <th>Agregado</th>
+      <th>\(\alpha_{E}\)</th>
+    </tr>
+  </thead>
+  <tbody align="center">
+    <tr>
+      <td align = "left">Basalto e Diabásio</td>
+      <td>1,2</td>
+    </tr>
+    <tr>
+      <td align = "left">Granito e Gnaisse</td>
+      <td>1,0</td>
+    </tr>
+    <tr>
+      <td align = "left">Calcário</td>
+      <td>0,9</td>
+    </tr>
+    <tr>
+      <td align = "left">Arenito</td>
+      <td>0,7</td>
+    </tr>
+  </tbody>
+</table>
+
+<p aligin = "justify">
+  Logo, para o granito, tem-se \(\alpha_{E} = 1,0\). Em seguida calcula-se o módulo de elasticidade (\(E_{ci}\)) por meio da equação <a href="#eq3">(3)</a>, visto que o valor de \(f_{ck}\) está entre 20 e 50 MPa, caso estivesse entre 55 e 90 MPa, deveria ser utilizada a equação <a href="#eq4">(4)</a>.
+</p>
+
+<p>
+  \[E_{ci} = 1,0 \cdot 5600 \cdot \sqrt{30} = 30672,46 \, \text{MPa}\]
+</p>
+
+<p aligin = "justify">
+  Para se calcular o módulo de elasticidade secante (\(E_{cs}\)), primeiramente define-se o parâmetro \(\alpha_{i}\) por meio da equação <a href="#eq6">(6)</a>.
+</p>
+
+<p>
+  \[\alpha_{i} = 0,8 + 0,2 \cdot \frac{30}{80} = 0,875 \leq 1,0 \]
+</p>
+
+<p aligin = "justify">
+  Logo, utiliza-se a equação <a href="#eq5">(5)</a> para definir o valor de \(E_{cs}\).
+</p>
+
+<p>
+  \[E_{cs} = 0,875 \cdot 30672,46 = 26838,41 \, \text{MPa}\]
+</p>
 
 <h2>Exercício 3</h2>
 
