--- a/001-2.md
+++ b/001-2.md
@@ -44,9 +44,8 @@ A seguir, estão os passos gerais envolvidos no dimensionamento do edifício:
 É possível pré-dimensionar as dimensões das vigas utilizando uma relação que envolve o vão efetivo (l<sub>ef</sub>). Para o presente projeto, o vão efetivo a ser considerado foram os vãos totais das vigas. Para o pré-dimensionamento de vigas, são utilizadas duas equações, na qual utilizam a relação com o vão efetivo das estruturas.
 </p>
 
-<p <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>h</mi><mo>=</mo><mfrac><mrow><mi>l</mi><mi>e</mi><mi>f</mi></mrow><mn>10</mn></mfrac>
+<math xmlns="http://www.w3.org/1998/Math/MathML"><mi>h</mi><mo>=</mo><mfrac><mrow><mi>l</mi><mi>e</mi><mi>f</mi></mrow><mn>10</mn></mfrac>
 </math>
-</p>
 
 <p aligin = "justify"> A fim de facilitar o processo construtivo, foi adotado uma altura da viga (h) de 50 cm para todas as vigas. Já para a largura da viga (bw) foi estimado um tijolo de 9 cm mais 5 cm de reboco (2,5 cm para cada lado). Dessa forma, as vigas adotadas são de 14 cm x 50 cm, respeitando a medida mínima de 12 cm de largura estabelecida pela NBR 6118.
 </p>
@@ -57,17 +56,16 @@ A seguir, estão os passos gerais envolvidos no dimensionamento do edifício:
 
 <p aligin = "justify"> Para o pré-dimensionamento é importante se atentar à medida mínima dada na NBR 6118, na qual estabelece que a laje que se encontra em balanço deve ter no mínimo uma altura (h) de 10 cm. Como as lajes são elementos de superfície, elas possuem duas dimensões em planta denominadas l<sub>x</sub>(menor dimensão) e l<sub>y</sub>(maior dimensão). As lajes são classificadas por meio da razão entre o seu o maior e o menor lado, dada por:</p>
 
-<p <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>&#x3bb;</mi><mo>=</mo><mfrac><mrow><mi>l</mi><mi>y</mi></mrow><mrow><mi>l</mi><mi>x</mi></mrow></mfrac></math>
-</p>
+<math xmlns="http://www.w3.org/1998/Math/MathML"><mi>&#x3bb;</mi><mo>=</mo><mfrac><mrow><mi>l</mi><mi>y</mi></mrow><mrow><mi>l</mi><mi>x</mi></mrow></mfrac></math>
 
 <p aligin = "justify"> Após determinar o modo que a laje está armada, é possível determinar a altura (h) da mesma, por meio das seguintes equações abaixo:</p>
 
-<p <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>h</mi><mo>=</mo><mn>2</mn><mo>%</mo><mo>*</mo><mo>(</mo><mfrac><mrow><mi>l</mi><mi>y</mi><mo>+</mo><mi>l</mi><mi>x</mi></mrow><mn>2</mn></mfrac><mo>)</mo></math>
+<math xmlns="http://www.w3.org/1998/Math/MathML"><mi>h</mi><mo>=</mo><mn>2</mn><mo>%</mo><mo>*</mo><mo>(</mo><mfrac><mrow><mi>l</mi><mi>y</mi><mo>+</mo><mi>l</mi><mi>x</mi></mrow><mn>2</mn></mfrac><mo>)</mo></math>
 <br>
 <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>h</mi><mo>=</mo><mn>2</mn><mo>%</mo><mo>*</mo><mo>(</mo><mi>l</mi><mi>x</mi><mo>)</mo></math>
 <br>
 <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>h</mi><mo>=</mo><mn>4</mn><mo>%</mo><mo>*</mo><mo>(</mo><mi>l</mi><mi>x</mi><mo>)</mo></math>
-</p>
+
 
 <p aligin = "justify"> Aplicando-se as equações e respeitando o limite mínimo dado em norma, pode-se construir a Tabela 2, na qual dá um valor para altura da laje de 11 cm, respeitando a NBR 6118 e padronizando os valores da altura.
 </p>
@@ -82,8 +80,8 @@ A seguir, estão os passos gerais envolvidos no dimensionamento do edifício:
 
 <p aligin = "justify"> Com isso, é possível determinar a Área de Concreto (Ac) por meio da seguinte fórmula:</p> 
 
-<p <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>A</mi><mi>c</mi><mo>=</mo><mfrac><mrow><mi>N</mi><mi>d</mi></mrow><mrow><mn>0</mn><mo>,</mo><mn>85</mn><mo>*</mo><mi>f</mi><mi>c</mi><mi>d</mi><mo>&#xA0;</mo><mo>+</mo><mo>&#xA0;</mo><mi>&#x3c1;</mi><mo>*</mo><mi>&#x3c3;</mi><mi>s</mi><mo>,</mo><mi>&#x3b5;</mi><mo>=</mo><mn>0</mn><mo>,</mo><mn>2</mn><mo>%</mo></mrow></mfrac></math>
-</p>
+<math xmlns="http://www.w3.org/1998/Math/MathML"><mi>A</mi><mi>c</mi><mo>=</mo><mfrac><mrow><mi>N</mi><mi>d</mi></mrow><mrow><mn>0</mn><mo>,</mo><mn>85</mn><mo>*</mo><mi>f</mi><mi>c</mi><mi>d</mi><mo>&#xA0;</mo><mo>+</mo><mo>&#xA0;</mo><mi>&#x3c1;</mi><mo>*</mo><mi>&#x3c3;</mi><mi>s</mi><mo>,</mo><mi>&#x3b5;</mi><mo>=</mo><mn>0</mn><mo>,</mo><mn>2</mn><mo>%</mo></mrow></mfrac></math>
+
 
 <p aligin = "justify"> Aplicando-se a equação acima é possível determinar a altura (h) dos pilares desse edifício.</p>
 
