--- a/001-1.md
+++ b/001-1.md
@@ -170,3 +170,76 @@ parent: Exemplos
   <b>03)</b> Dada a revisão 2023 da NBR 6118 você deve apresentar o diagrama tensão-deformação na compressão para o concreto simples estrutural. A formulação é dada no item 8.2.10.1. Fazer um exemplo de diagrama para um concreto C30, C40, C50 e C70 comparando os gráficos.
 </p>
 
+<table>
+  <tr>
+    <td align = "left">\[\sigma_{c} = 0,85 \cdot \eta_{c} \cdot f_{cd} \cdot \left[ 1 - \left( 1 - \frac{\epsilon_{c}}{\epsilon_{c2}} \right) ^{n} \right] \]</td>
+    <td><p align = "right" id = "eq7">(7)</p></td>
+  </tr>
+</table>
+
+<p aligin = "justify">
+  Para que se possa calcular o valor \(\sigma_{c}\) por meio da equação <a href="#eq7">(7)</a>, primeiramente deve-se definir a resistência de cálculo do concreto. Considerando o valor do coeficiente \(\gamma_{c} = 1,4\) e \(f_{ck} = 30 \, \text{MPa}\), tem-se que:
+</p>
+
+<p>
+  \[f_{cd} = \frac{f_{ck}}{\gamma_{c}} = \frac{30}{1,4} = 21,43 \, \text{MPa}\]
+</p>
+
+<p aligin = "justify">
+  Em seguida, define-se o valor dos parâmetros \(\eta_{c}\), \(\epsilon_{c2}\), \(\epsilon_{cu}\) e \(n\), na qual O item 8.2.10.1 da NBR 6118:2023 apresenta as seguintes condições de acordo com a classe do concreto utilizado.
+</p>
+
+<p aligin = "justify">
+  - Para concretos de classes até C50:
+</p>
+
+<p aligin = "justify">
+  \(\epsilon_{c2} = 2,0 &permil;\);
+</p>
+
+<p aligin = "justify">
+  \(\epsilon_{cu} = 3,5 &permil;\)
+</p>
+
+<p aligin = "justify">
+  - Para concretos de classes C55 até C90:
+</p>
+
+<p aligin = "justify">
+  \(\epsilon_{c2} = 2,0 &permil; + 0,085 &permil; \cdot \left( f_{ck} - 50 \right) ^{0,53} \);
+</p>
+
+<p aligin = "justify">
+  \(\epsilon_{cu} = 2,6 &permil; + 35 &permil; \cdot \left[ \frac{\left( 90 - f{ck} \right)}{100} \right] ^{4} \);
+</p>
+
+<p aligin = "justify">
+  - Para \(f_{ck} \leq 40 \, \text{MPa} \): \(\eta_{c} = 1,0\)
+</p>
+
+<p aligin = "justify">
+  - Para \(f_{ck} > 40 \, \text{MPa} \): \(\eta_{c} = \left( \frac{40}{f_{ck}} \right) ^{1/3} \)
+</p>
+
+<p aligin = "justify">
+  - Para \(f_{ck} \leq 50 \, \text{MPa} \): \(n = 2\)
+</p>
+
+<p aligin = "justify">
+  - Para \(f_{ck} > 50 \, \text{MPa} \): \(n = 1,4 + 23,4 \cdot \left[ \frac{\left(90 - f_{ck}\right)}{100} \right] ^{4} \)
+</p>
+
+<p aligin = "justify">
+  Calculando-se os parâmetros apresentados para um concreto de classe C30, tem-se:
+</p>
+
+<p>
+  \[\epsilon_{c2} = 2,0 &permil;\]
+  \[\epsilon_{cu} = 3,5 &permil;\]
+  \[\eta_{c} = 1,0\]
+  \[n = 2\]
+</p>
+
+<p aligin = "justify">
+  Logo, é possível construir o gráfico de tensão-deformação considerando \(0 \leq \epsilon_{c} \leq \epsilon_{cu}\), sendo o eixo \(x\) referente a \(\epsilon_{c}\) e o eixo \(y\) referente a \(\sigma_{c}\), dado pela equação <a href="#eq7">(7)</a>.
+</p>
